; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_atm.c_atm_tc_find_tcf.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_atm.c_atm_tc_find_tcf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tcf_proto = type { i32 }
%struct.Qdisc = type { i32 }
%struct.atm_qdisc_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.tcf_proto* }
%struct.atm_flow_data = type { %struct.tcf_proto* }

@.str = private unnamed_addr constant [44 x i8] c"atm_tc_find_tcf(sch %p,[qdisc %p],flow %p)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.tcf_proto** (%struct.Qdisc*, i64)* @atm_tc_find_tcf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.tcf_proto** @atm_tc_find_tcf(%struct.Qdisc* %0, i64 %1) #0 {
  %3 = alloca %struct.Qdisc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.atm_qdisc_data*, align 8
  %6 = alloca %struct.atm_flow_data*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %8 = call %struct.atm_qdisc_data* @qdisc_priv(%struct.Qdisc* %7)
  store %struct.atm_qdisc_data* %8, %struct.atm_qdisc_data** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = inttoptr i64 %9 to %struct.atm_flow_data*
  store %struct.atm_flow_data* %10, %struct.atm_flow_data** %6, align 8
  %11 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %12 = load %struct.atm_qdisc_data*, %struct.atm_qdisc_data** %5, align 8
  %13 = load %struct.atm_flow_data*, %struct.atm_flow_data** %6, align 8
  %14 = call i32 @pr_debug(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), %struct.Qdisc* %11, %struct.atm_qdisc_data* %12, %struct.atm_flow_data* %13)
  %15 = load %struct.atm_flow_data*, %struct.atm_flow_data** %6, align 8
  %16 = icmp ne %struct.atm_flow_data* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load %struct.atm_flow_data*, %struct.atm_flow_data** %6, align 8
  %19 = getelementptr inbounds %struct.atm_flow_data, %struct.atm_flow_data* %18, i32 0, i32 0
  br label %24

20:                                               ; preds = %2
  %21 = load %struct.atm_qdisc_data*, %struct.atm_qdisc_data** %5, align 8
  %22 = getelementptr inbounds %struct.atm_qdisc_data, %struct.atm_qdisc_data* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  br label %24

24:                                               ; preds = %20, %17
  %25 = phi %struct.tcf_proto** [ %19, %17 ], [ %23, %20 ]
  ret %struct.tcf_proto** %25
}

declare dso_local %struct.atm_qdisc_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local i32 @pr_debug(i8*, %struct.Qdisc*, %struct.atm_qdisc_data*, %struct.atm_flow_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
